[gd_scene load_steps=7 format=3 uid="uid://d3t62bxcdnwj"]

[ext_resource type="Script" path="res://Scripts/pipe_pair.gd" id="1_fgbj5"]
[ext_resource type="Texture2D" uid="uid://drx10uoxjpba5" path="res://Assets/pipe-green.png" id="2_ej0xa"]
[ext_resource type="AudioStream" uid="uid://dx8d62fb5xydt" path="res://Assets/712851__lewisitoo__sfx-success.ogg" id="3_to6c2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjuro"]
size = Vector2(46, 477)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kerov"]
size = Vector2(47, 444)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cady"]
size = Vector2(20, 146)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_fgbj5")

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2(0, -300)
rotation = -3.14159

[node name="TopPipeSrpite" type="Sprite2D" parent="TopPipe"]
texture = ExtResource("2_ej0xa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(-4.37121e-08, -1.5)
shape = SubResource("RectangleShape2D_fjuro")

[node name="BottomPipe" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(-0.5, 285)
shape = SubResource("RectangleShape2D_kerov")

[node name="BottomPipeSprite" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, 300)
texture = ExtResource("2_ej0xa")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(45, 0)

[node name="Scored" type="Area2D" parent="."]
position = Vector2(45, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_1cady")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_to6c2")

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Scored" to="." method="_on_scored_body_entered"]
